# SideTone

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  build.rs  installer.iss
.github/workflows/: mac-beta.yml
scripts/: make-app.sh
src/: audio_pipeline.rs  domain.rs  downloads.rs  imports.rs  library.rs  main.rs  migration.rs  persistence.rs  player.rs  playlists.rs  streaming.rs  streaming_helpers.rs  updates.rs
