[package]
name = "sidetone"
version = "7.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
winresource = "0.1"

[dependencies]
cpal = "0.17.3"
global-hotkey = "0.8.0"
reqwest = { version = "0.13.4", features = ["blocking"] }
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
slint = "1.16.1"
souvlaki = "0.8.3"
tray-icon = "0.24.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
